--- a/index.html
+++ b/index.html
@@ -29,12 +29,12 @@
 </header>
 
 <main>
-    <section>
+    <section class="texto_banner">
         <p>Os Melhores Animes</p>
         <p> Aproveite milhares de episódios legendados e exclusivamente dublados de animes selecionados, além de filmes, animes clássicos e as últimas novidades do Japão.</p>
-        <a href="#">Assistir online</a>      
+        <a href="#" id="assistir">Assistir online</a>      
     </section>
-    <section>
+    <section class="destaque">
         <h3>Novas dublagens</h3>
             <div>
                 <figure>
@@ -55,6 +55,7 @@
                 </figure>
             </div>
         </section>
+        <section class="destaque">        
         <h3>Top 10</h3>
         <div>
             <figure>
@@ -83,6 +84,13 @@
             </figure>
         </div>
     </section>
+    <section class="texto_banner">
+        <p>Animes Sem Anúncios com Premium Plus
+        por 24,90 ao mês</p>
+        <p>Aproveite milhares de episódios legendados e exclusivamente dublados de animes selecionados, além de
+        filmes, e encontre sucessos, clássicos e as últimas novidades do Japão.</p>
+        <a href="" id="assinar">Assine o plano plus</a>
+        </section>
 
 </main>
 <footer>
