--- a/progamacao.html
+++ b/progamacao.html
@@ -30,10 +30,10 @@
     
 <main>
     <h1>Programação Semanal, de 15/03 - 19/03</h1>
-    <section>
+    <section class="texto_banner">
         <p>   Não perca os mais recentes episódios de catálogo, filmes e muito mais. </p>
     </section>
-    <section>
+    <section class="programacao">
         <h3>Segunda feira 15/03</h3>
         <article>
             <img src="imagens/AttackOnTitan.jpg">
@@ -45,7 +45,7 @@
         </article>
     </section>
     <hr>
-    <section>
+    <section class="programacao">
         <h3>Terça Feira 16/03</h3>
         <article>
             <img src="imagens/Demon Slayer.jpg">
@@ -65,7 +65,7 @@
         </article>
     </section>
     <hr>
-    <section>
+    <section class="programacao">
         <h3>Quarta feira 17/03</h3>
         <article>
             <img src="imagens/dragonballz.jpg">
@@ -77,7 +77,7 @@
         </article>
     </section>
     <hr>
-    <section>
+    <section class="programacao">
         <h3>Quinta Feira 18/03</h3>
         <article>
             <img src="imagens/onepiece.jpg">
@@ -89,7 +89,7 @@
         </article>
     </section>
     <hr>
-    <section>
+    <section class="programacao">
         <h3>Sexta Feira 19/03</h3>
         <article>
             <img src="imagens/My Hero Academia.jpg">
@@ -125,7 +125,7 @@
 
 </main>
 <footer>
-    <div>
+    <div class="container">
         <nav>
             <a href="sobre.html">Sobre nós</a>
             <a href="suporte.html">Suporte ao cliente</a>
