--- a/galeria.html
+++ b/galeria.html
@@ -30,7 +30,7 @@
     
 <main>
     <h1>Galeria de Animes da BrAnimes</h1>
-    <section>
+    <section id="galeria">
         <img src="imagens/Fairy Tail.jpg">
         <img src="imagens/My Hero Academia.jpg">
         <img src="imagens/naruto.jpg">
@@ -43,7 +43,7 @@
 
 </main>
 <footer>
-    <div>
+    <div class="container">
         <nav>
             <a href="sobre.html">Sobre nós</a>
             <a href="suporte.html">Suporte ao cliente</a>
