--- a/planos.html
+++ b/planos.html
@@ -30,7 +30,7 @@
     
 <main>
     <h1>Planos de Contratação Plus</h1>
-    <section>
+    <section id="destaque_plus">
         <figure>
             <img src="imagens/sucessos.png">
             <p>
@@ -60,12 +60,12 @@
             </p>
         </figure>
     </section>
-    <section>
+    <section class="texto_banner">
         <p>Comece hoje mesmo a assistir animes</p>
         <p>Você pode mudar de plano a qualquer momento. Todos os planos incluem um período de avaliação gratuita.</p>
     </section>
-    <section>
-        <p>Premium Plus</p>
+    <section class="planos">
+                <p>Premium Plus</p>
         <span>R$ 24,90 / mês</span>
     
     <hr>
@@ -75,13 +75,13 @@
         <li>Dublados e Legendados</li>  
     </ul>
     <hr>
-    <a href="">Assine o Plano Plus</a>
+    <a href="" id="assinar">Assine o Plano Plus</a>
     </section>
 
 
 </main>
 <footer>
-    <div>
+    <div class="container">
         <nav>
             <a href="sobre.html">Sobre nós</a>
             <a href="suporte.html">Suporte ao cliente</a>
